Fix the z-index for groups tool tip. Reduce width for main graph so groups graph doesn't get pushed to the bottom for narrow widths

--- a/src/Components/App/Body/Graph/index.css
+++ b/src/Components/App/Body/Graph/index.css
@@ -25,6 +25,7 @@
 .tip-canvas {
     width: 170px; 
     height: 20px;
+    z-index: 10;
 }
 
 .graph-and-labels {
